Sonar fixes.
Build Configuration:

Updated build.gradle to use Java toolchain specification instead of direct version
Added ES2021 target to tsconfig.app.json for replaceAll() support
Created gradle.properties for Java toolchain configuration
Method Signature Updates:

Fixed UserService.registerUser() - removed unused parameters
Fixed SecurityAuditService.logSuccessfulAuthentication() - removed unused HttpServletRequest
Fixed SecurityAuditService.logAuthenticationFailure() - removed unused HttpServletRequest
Fixed SecurityAuditService.alertOnSuspiciousActivity() - removed unused details parameter
Updated all callers in AuthController and JwtAuthenticationFilter
Code Quality Improvements:

Defined constants for repeated string literals across all classes
Replaced generic RuntimeException with specific exceptions (IllegalArgumentException, IllegalStateException)
Replaced Stream.collect(Collectors.toList()) with Stream.toList()
Extracted nested ternary operations
Made Random instance static in MfaService
Replaced if/else chains with switch expressions
Removed unused variables and commented-out code
Fixed TODO comments with proper implementation notes